[gd_scene load_steps=22 format=3 uid="uid://cdr0morjtre10"]

[ext_resource type="Texture2D" uid="uid://bo3pxfhkmaa80" path="res://Main/Sprites/Characters/npc_testcharacter.png" id="1"]
[ext_resource type="Script" path="res://Main/Scripts/UI/Stamina.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://b3ei6v8fxxs4t" path="res://Main/Sprites/Ui/stamina/stamina_progress.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dgvwuu3q1mai5" path="res://Main/Sprites/Ui/stamina/stamina_bar.png" id="4"]
[ext_resource type="Texture2D" uid="uid://b1k3rg1ru24fs" path="res://Main/Sprites/Ui/stamina/stamina_backround.png" id="5"]
[ext_resource type="Script" path="res://Main/Scripts/Player/Player.gd" id="6"]
[ext_resource type="Texture2D" uid="uid://c7g3uokl7u8gx" path="res://Main/Sprites/Ui/life/ui_life_backround.png" id="7"]
[ext_resource type="Texture2D" uid="uid://cg0mknu5m7euc" path="res://Main/Sprites/Ui/life/ui_life_bar.png" id="8"]
[ext_resource type="Texture2D" uid="uid://cnb2jpvd6joiq" path="res://Main/Sprites/Ui/ui_lifetext.png" id="9"]
[ext_resource type="Texture2D" uid="uid://b56yes4bd0yy0" path="res://Main/Sprites/Ui/life/ui_life_progress.png" id="10"]
[ext_resource type="Texture2D" uid="uid://bo0ufa1trbfxf" path="res://Main/Sprites/Ui/ui_terrorradius.png" id="11"]
[ext_resource type="Script" path="res://Main/Scripts/UI/TerrorUi.gd" id="12"]

[sub_resource type="SpriteFrames" id="3"]

[sub_resource type="CircleShape2D" id="2"]
radius = 6.0

[sub_resource type="CircleShape2D" id="4"]

[sub_resource type="Animation" id="5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UiTerrorradius:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UiTerrorradius:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(14, 16.5)]
}

[sub_resource type="Animation" id="6"]
resource_name = "lvl0"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UiTerrorradius:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UiTerrorradius:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(15, 16.5)]
}

[sub_resource type="Animation" id="7"]
resource_name = "lvl1"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UiTerrorradius:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UiTerrorradius:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(14.75, 16.5)]
}

[sub_resource type="Animation" id="9"]
resource_name = "lvl2"
length = 0.2
step = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UiTerrorradius:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.00216227),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UiTerrorradius:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(14.5, 16.5), Vector2(14, 16), Vector2(15, 17), Vector2(14.7, 15.5), Vector2(13.5, 15)]
}

[sub_resource type="Animation" id="8"]
resource_name = "lvl3"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UiTerrorradius:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UiTerrorradius:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.000760269, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(14.5, 16.5), Vector2(13.5, 15.5), Vector2(15.5, 17.5), Vector2(14.5, 14.5), Vector2(13.5, 12.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bjwnv"]
_data = {
"RESET": SubResource("5"),
"lvl0": SubResource("6"),
"lvl1": SubResource("7"),
"lvl2": SubResource("9"),
"lvl3": SubResource("8")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 4
script = ExtResource("6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
frames = SubResource("3")

[node name="NpcTestcharacter" type="Sprite2D" parent="AnimatedSprite2D"]
texture = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("2")

[node name="PlayerTerrorLVL1" type="Area2D" parent="."]

[node name="RadiusLVL1" type="CollisionShape2D" parent="PlayerTerrorLVL1"]
visible = false
scale = Vector2(15, 15)
shape = SubResource("4")

[node name="PlayerTerrorLVL2" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2

[node name="RadiusLVL2" type="CollisionShape2D" parent="PlayerTerrorLVL2"]
scale = Vector2(10, 10)
shape = SubResource("4")

[node name="PlayerTerrorLVL3" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4

[node name="RadiusLVL3" type="CollisionShape2D" parent="PlayerTerrorLVL3"]
scale = Vector2(5, 5)
shape = SubResource("4")

[node name="UI" type="Node2D" parent="."]

[node name="StaminaBar" type="Node" parent="UI"]

[node name="CanvasLayer" type="CanvasLayer" parent="UI/StaminaBar"]
scale = Vector2(5, 5)
transform = Transform2D(5, 0, 0, 5, 0, 0)

[node name="Stamina" type="TextureProgressBar" parent="UI/StaminaBar/CanvasLayer"]
offset_left = 22.8
offset_top = 17.4
offset_right = 63.8
offset_bottom = 24.4
max_value = 200.0
value = 200.0
texture_under = ExtResource("5")
texture_over = ExtResource("4")
texture_progress = ExtResource("3")
script = ExtResource("2")

[node name="Timer" type="Timer" parent="UI/StaminaBar/CanvasLayer/Stamina"]

[node name="HealthBar" type="Node" parent="UI"]

[node name="CanvasLayer2" type="CanvasLayer" parent="UI/HealthBar"]
scale = Vector2(5, 5)
transform = Transform2D(5, 0, 0, 5, 0, 0)

[node name="Text" type="Sprite2D" parent="UI/HealthBar/CanvasLayer2"]
visible = false
position = Vector2(48.3, 12.9)
texture = ExtResource("9")

[node name="TextureProgressBar" type="TextureProgressBar" parent="UI/HealthBar/CanvasLayer2"]
offset_left = 23.0
offset_top = 9.0
offset_right = 34.0
offset_bottom = 16.0
max_value = 2.0
value = 2.0
texture_under = ExtResource("7")
texture_over = ExtResource("8")
texture_progress = ExtResource("10")

[node name="TerrorRadius" type="Node" parent="UI"]

[node name="CanvasLayer3" type="CanvasLayer" parent="UI/TerrorRadius"]
scale = Vector2(5, 5)
transform = Transform2D(5, 0, 0, 5, 0, 0)

[node name="UiTerrorradius" type="Sprite2D" parent="UI/TerrorRadius/CanvasLayer3"]
position = Vector2(14, 16.5)
texture = ExtResource("11")
hframes = 4
script = ExtResource("12")

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/TerrorRadius/CanvasLayer3"]
autoplay = "lvl0"
libraries = {
"": SubResource("AnimationLibrary_bjwnv")
}

[node name="ScentTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="area_entered" from="PlayerTerrorLVL1" to="." method="_on_PlayerTerrorLVL1_area_entered"]
[connection signal="area_exited" from="PlayerTerrorLVL1" to="." method="_on_PlayerTerrorLVL1_area_exited"]
[connection signal="area_entered" from="PlayerTerrorLVL2" to="." method="_on_PlayerTerrorLVL2_area_entered"]
[connection signal="area_exited" from="PlayerTerrorLVL2" to="." method="_on_PlayerTerrorLVL2_area_exited"]
[connection signal="area_entered" from="PlayerTerrorLVL3" to="." method="_on_PlayerTerrorLVL3_area_entered"]
[connection signal="area_exited" from="PlayerTerrorLVL3" to="." method="_on_PlayerTerrorLVL3_area_exited"]
[connection signal="timeout" from="UI/StaminaBar/CanvasLayer/Stamina/Timer" to="UI/StaminaBar/CanvasLayer/Stamina" method="_on_Timer_timeout"]
